Made adjustments to the website flow.
I believe this looks a bit better now.

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -459,10 +459,16 @@ body {
 }
 
 .card-header{
-  color: White !important;
-  background-color: cornflowerblue !important;
 }
 
 .navbar-custom{
   background-color: #706656 !important;
+}
+
+.left-align{
+  padding: 3%;
+  text-align: left;
+}
+.left{
+  text-align: left;
 }
