--- a/Live_Map/static/css/style.css
+++ b/Live_Map/static/css/style.css
@@ -19,7 +19,7 @@ body,
     height: 18px;
     float: left;
     margin-right: 8px;
-    opacity: 0.7;
+    opacity: 0.7;s
 }
 .legend {
     padding: 10px;
@@ -29,10 +29,3 @@ body,
     border-radius: 5px;
   }
 
-.legend i {
-    width: 18px;
-    height: 18px;
-    float: left;
-    margin-right: 8px;
-    opacity: 0.7;
-}
