--- a/Live_Map/static/css/style.css
+++ b/Live_Map/static/css/style.css
@@ -19,13 +19,5 @@ body,
     height: 18px;
     float: left;
     margin-right: 8px;
-    opacity: 0.7;s
+    opacity: 0.7;
 }
-.legend {
-    padding: 10px;
-    line-height: 18px;
-    color: #555;
-    background-color: #fff;
-    border-radius: 5px;
-  }
-
