--- a/Live_Map/static/css/style.css
+++ b/Live_Map/static/css/style.css
@@ -1,10 +1,15 @@
-html,
-body,
+/*html,*/
+/*body{*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*}*/
+
 #mapid {
+    position: relative;
     width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
+    height: 600px;
+    /*padding: 0;*/
+    /*margin: 0;*/
 }
 .legend {
     padding: 10px;
