--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -321,7 +321,7 @@ padding-bottom: 7%} /*  Alternate shading for alternating background colors */
 .section_dini{
   /*border-radius: 25px;*/
   /*background: #7A3E48;*/
-  padding: auto;
+  /*padding: auto;*/
   margin: auto;
   /*box-shadow: inset 0.2em 0.2em 0.2em 0 rgba(255,255,255,0.5), inset -0.2em -0.2em 0.2em 0 rgba(0,0,0,0.5);*/
   /*width: 100%;*/
@@ -365,8 +365,7 @@ body {
 }
 
 
-.list-group-item,
-.list-group{
+.list-cst{
   background: #FFFBF4 !important;
 }
 
@@ -471,4 +470,7 @@ body {
 }
 .left{
   text-align: left;
+}
+
+.more-padding-footer{
 }
